# python3-llxaccessibility

./: README.md  pyproject.toml  setup.py
debian/: changelog  control  rules
llxaccessibility/: llxaccessibility.py  profileManager.py  ttsManager.py
llxaccessibility/libs/: a11Manager.py  clipboardManager.py  imageProcessing.py  imageprocessing.py  kconfig.py  kwinManager.py  profileManager.py  sddmManager.py  speaker.py  ttsManager.py
src/llxaccessibility/: llxaccessibility.py  ttsManager.py
