[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name='llxaccessibillity'
version="0.3"
description='lliurex accessibility api'
authors=[
  {name='Lliurex Team'},
  {name="juanma1980",email='juanma1980@gmail.com'},
  ]
requires-python=">=3.8"
keywords=['software','desktop','development']
license= {text='GPL-3'}
classifiers=[
  "Programming Language :: Python :: 3",
  ]
dependencies=[
  "requests",
  "dbus",
  ]

